Resuelto problema con el logo

--- a/styles/estilo1.css
+++ b/styles/estilo1.css
@@ -13,3 +13,11 @@ footer {
 .principal {
     background-color: white;
 }
+
+/* On small screens */
+@media screen and (max-width: 767px) {
+    #logo {
+        width: 80%;
+        height: 80%;
+    }
+}
