Some things done

--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -1,3 +1,5 @@
+@import "pie.css";
+
 html {
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
@@ -8033,7 +8035,7 @@ button.close {
         height: 100%;
     }
 
-    .header {
+.header {
         background-color: black;
         color: white;
         height: 70px;
