Empiezo parte interna
empleado ok!

--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,12 @@
 		font-size: 35px;
 	}
 
-	#pacojefe{
+	#iniciosesion{
 		font-weight: bold;
 		color: #8f1027;
 	}
 
-	#pacojefe1{
+	#registro{
 		font-weight: bold;
 		color: #8f1027;
 	}
