--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,3 +1,41 @@
+.artadded {
+    background-color: #43ac6a;
+    position: absolute;
+    top: 0;
+    padding: 10px 0;
+    /*border-radius:  0 0 5px 5px;*/
+    border-radius:  0 0 5px 5px;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.artupdated {
+    background-color: lightblue;
+    position: absolute;
+    top: 0;
+    padding: 10px 0;
+    /*border-radius:  0 0 5px 5px;*/
+    border-radius:  0 0 5px 5px;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.artdeleted {
+    background-color: yellow;
+    position: absolute;
+    top: 0;
+    padding: 10px 0;
+    /*border-radius:  0 0 5px 5px;*/
+    border-radius:  0 0 5px 5px;
+    color: black;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
 html {
 font-family : sans-serif;
 }
