Validación en servidor.

--- a/css/main.css
+++ b/css/main.css
@@ -1592,7 +1592,7 @@
 /* Basic */
 
 	body {
-		background: #8f1027;
+		background: white;
 		color: #5b5b5b;
 		font-size: 15pt;
 		line-height: 1.85em;
